src/objects/FeatureFlagAccess__mdt.object
<CustomObject>
    <fields>
        <fullName>AccessType__c</fullName>
        <label>AccessType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                    <default>true</default>
                    <label>Profile</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <referenceTo>FeatureFlagConfig__mdt</referenceTo>
        <relationshipLabel>FeatureFlagAccesses</relationshipLabel>
        <relationshipName>Feature_Flag_Profiles_Roles</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Consumer Support</fullName>
                </value>
                <value>
                    <fullName>Optum Coach</fullName>
                </value>
                <value>
                    <fullName>Optum Coach Manager</fullName>
                </value>
                <value>
                    <fullName>Optum Demand Manager</fullName>
                </value>
                <value>
                    <fullName>Optum Messaging Coach</fullName>
                </value>
                <value>
                    <fullName>Optum Product/Ops Leader</fullName>
                </value>
                <value>
                    <fullName>Optum Quality Analyst</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read Only API User</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Coach</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Coach Manager</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Demand Manager</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Marketing</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Messaging Coach</fullName>
                </value>
                <value>
                    <fullName>Real Appeal Product/Ops Leader</fullName>
                </value>
                <value>
                    <fullName>featureflagtestuser@testoptum.com</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FeatureFlagAccess</label>
    <pluralLabel>FeatureFlagAccesses</pluralLabel>
</CustomObject>